--- a/portfolio-item-candidate.html
+++ b/portfolio-item-candidate.html
@@ -37,22 +37,22 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Baghor-Irene <strong>Portfolio</strong>
+                Candidate <strong>Server</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Irene Portfolio</p>
+            <p class="section__subtitle section__subtitle--intro">A better career is out there.</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
-            <p>This is Ineza Irene Baghor portfolio which describes who he is, what he do and his skills in software developments! Especially his lifetime career.</p>
+            <p>Candidate server is site where user can go and find a job of his wishes and this also 
+                helps the big and small company to hire some one who is qualified to specific job.
+            </p>
             <img src="img/portfolio-details.jpg" alt="">
-            <p>This portfolio is developed in three combined programming languages which are; HTML5, CSS and Vanilla JavaScritpt.</p>
-            <p>It is consisted with four sections;<br> <strong>Section One:</strong>  Is for homepage which displays all of the welcoming content and the other sections. <br> 
-                <strong>Section Two:</strong>  Consist the services that Ineza Irene baghor is capable of providing including design and development. <br>
-                <strong>Section Three:</strong>  Consist his biography, who is he and what does he do for the sake of his life. <br>
-                <strong>Section Four:</strong>  Which is the last consisit his works 
-                as a software developper, it consist all of his real world project that he implemented.  <br>  
-                <Strong>Visit this link to check it out:</Strong>  <a href="(https://baghor.github.io/Irene-Portfolio/index.html)  ">Irene Portfolio</a>         
+            <p>Candidate Server connects the job seeker and the job creator to get along of what both of side needs,
+                 it  can be either on job seeker side or job creator side. And it consists different types of jobs to help the
+                user to choose what really fits him/her perfectly or if they can perform many tasks at a time. <br>
+                Site still under construction not yet published live.
+                <!-- <Strong>Visit this link to check it out: </Strong>  <a href="">Candidate Server</a>   -->
             </p>
         </div>
         
