--- a/portfolio-item-event.html
+++ b/portfolio-item-event.html
@@ -37,22 +37,20 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Baghor-Irene <strong>Portfolio</strong>
+                Events <strong>Bash</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Irene Portfolio</p>
+            <p class="section__subtitle section__subtitle--intro">Find Fav Events</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
-            <p>This is Ineza Irene Baghor portfolio which describes who he is, what he do and his skills in software developments! Especially his lifetime career.</p>
+            <p>Events Bash is the #1 site in Kigali for finding any and all events and happenings! This product, by far, 
+                has the most potential and longest runaway.
+            </p>
             <img src="img/portfolio-details.jpg" alt="">
-            <p>This portfolio is developed in three combined programming languages which are; HTML5, CSS and Vanilla JavaScritpt.</p>
-            <p>It is consisted with four sections;<br> <strong>Section One:</strong>  Is for homepage which displays all of the welcoming content and the other sections. <br> 
-                <strong>Section Two:</strong>  Consist the services that Ineza Irene baghor is capable of providing including design and development. <br>
-                <strong>Section Three:</strong>  Consist his biography, who is he and what does he do for the sake of his life. <br>
-                <strong>Section Four:</strong>  Which is the last consisit his works 
-                as a software developper, it consist all of his real world project that he implemented.  <br>  
-                <Strong>Visit this link to check it out:</Strong>  <a href="(https://baghor.github.io/Irene-Portfolio/index.html)  ">Irene Portfolio</a>         
+            <p>We are very excited about the future of this product.Major
+                updates are coming soon with enhanced social features and MurugoCloud User support. <br>
+                <Strong>Visit this link to check it out:</Strong>  <a href="(https://events-bash.com/)  ">Events-Bash</a>  
             </p>
         </div>
         
