--- a/portfolio-item-hello.html
+++ b/portfolio-item-hello.html
@@ -37,22 +37,24 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Baghor-Irene <strong>Portfolio</strong>
+                Hello Kigali <strong>Website</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Irene Portfolio</p>
+            <p class="section__subtitle section__subtitle--intro">Kigali city discovery web app</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
-            <p>This is Ineza Irene Baghor portfolio which describes who he is, what he do and his skills in software developments! Especially his lifetime career.</p>
+            <p>This app was built by local street teams venturing out to find the best spots and their exact locations. 
+                It could be the most trusted app for where places in Rwanda are exactly located.
+            </p>
             <img src="img/portfolio-details.jpg" alt="">
-            <p>This portfolio is developed in three combined programming languages which are; HTML5, CSS and Vanilla JavaScritpt.</p>
-            <p>It is consisted with four sections;<br> <strong>Section One:</strong>  Is for homepage which displays all of the welcoming content and the other sections. <br> 
-                <strong>Section Two:</strong>  Consist the services that Ineza Irene baghor is capable of providing including design and development. <br>
-                <strong>Section Three:</strong>  Consist his biography, who is he and what does he do for the sake of his life. <br>
-                <strong>Section Four:</strong>  Which is the last consisit his works 
-                as a software developper, it consist all of his real world project that he implemented.  <br>  
-                <Strong>Visit this link to check it out:</Strong>  <a href="(https://baghor.github.io/Irene-Portfolio/index.html)  ">Irene Portfolio</a>         
+            <p>Currently, Hello Kigali has over 1,000 sites like restaurants, cafes, nightclubs, hotels, embassy, shopping, medical, 
+                tourism, wifi locations, and other desired locations. The 2020 version has ratings and other social features.
+            </p>
+            <p>Hello Kigali is a free city discovery guide for restaurants, cafes, WiFi, and more. Explore, collect badges, 
+                and rate your favorite sites as you pick what is 'Best of Kigali.' The WiFi indicator is perfect for anyone
+                new to Kigali, Rwanda, and seeking the best restaurants and cafes to visit and get some work done. <br>
+               <Strong>Visit this link to check it out:</Strong>  <a href="(https://hellokigali.com/)  ">Hello Kigali</a>   
             </p>
         </div>
         
