--- a/portfolio-item-rite.html
+++ b/portfolio-item-rite.html
@@ -37,22 +37,19 @@
 
         <section class="intro">
             <h1 class="section__title section__title--intro">
-                Baghor-Irene <strong>Portfolio</strong>
+                Erite <strong>Pharmacy</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">Irene Portfolio</p>
+            <p class="section__subtitle section__subtitle--intro">Online Medical E-commerce</p>
             <img src="img/portfolio-01.jpg" alt="" class="intro__img">
         </section>
         
         <div class="portfolio-item-individual">
-            <p>This is Ineza Irene Baghor portfolio which describes who he is, what he do and his skills in software developments! Especially his lifetime career.</p>
+            <p>Erite Pharmacy is a store and pharmacy which is based in Kigali, Rwanda.
+            </p>
             <img src="img/portfolio-details.jpg" alt="">
-            <p>This portfolio is developed in three combined programming languages which are; HTML5, CSS and Vanilla JavaScritpt.</p>
-            <p>It is consisted with four sections;<br> <strong>Section One:</strong>  Is for homepage which displays all of the welcoming content and the other sections. <br> 
-                <strong>Section Two:</strong>  Consist the services that Ineza Irene baghor is capable of providing including design and development. <br>
-                <strong>Section Three:</strong>  Consist his biography, who is he and what does he do for the sake of his life. <br>
-                <strong>Section Four:</strong>  Which is the last consisit his works 
-                as a software developper, it consist all of his real world project that he implemented.  <br>  
-                <Strong>Visit this link to check it out:</Strong>  <a href="(https://baghor.github.io/Irene-Portfolio/index.html)  ">Irene Portfolio</a>         
+            <p>Erite pharamcy sells many of medical stuffs includes pharmaceutical products and they sell also kids producst which includes 
+                diapers, cereals food, biscuits and many more child products. <br>
+                <Strong>Visit this link to check it out:</Strong>  <a href="(https://eritepharmacy.com/)  ">Erite Pharmacy</a>  
             </p>
         </div>
         
